kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: garu-io-frontend-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%

  selector:
    matchLabels:
      app: api
      tier: api

  template:
    metadata:
      labels:
        app: api
        tier: api

    spec:
      containers:

        - name: api
          image: garugaru/garu-io-frontend-api:latest

          ports:
            - containerPort: 8080
              name: api

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            failureThreshold: 5
            successThreshold: 1
            periodSeconds: 5

          resources:
            requests:
              memory: "10Mi"
              cpu: "5m"
            limits:
              memory: "30Mi"
              cpu: "50m"
