kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: garu-io-frontend-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: apis.garu.io
      http:
        paths:
          - path: /portfolio/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: garu-io-frontend-api
                port:
                  number: 80
          - path: /personal/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: garu-io-frontend-api
                port:
                  number: 80
  tls:
    - hosts:
        - apis.garu.io
      secretName: garu-io-cert-frontend
